# CMRobot_SW

./: CMakeLists.txt  LICENSE
app/: CMakeLists.txt
app/CMRobotApp/: CMakeLists.txt
app/CMRobotApp/Src/: main.cpp
app/CMRobotSimu/: CMakeLists.txt
app/CMRobotSimu/Src/: main.cpp
app/Example/: CMakeLists.txt
app/Example/btgl/: CMakeLists.txt  main.cpp
app/Example/bullet/: CMakeLists.txt  main.cpp
app/Example/filterTest/: CMakeLists.txt  main.cpp
app/Example/opengl/: CMakeLists.txt  VertexShader.vert  main.cpp  main1.cpp
app/test/: CMakeLists.txt
app/test/Src/: main.cpp
config/: CMRobotCfg.xml
config/robotCfg/: flexivRobot.urdf
lib/: CMakeLists.txt
lib/Base/Inc/: baseStdLibs.hpp  cmrException.hpp  cmrMath.hpp  cmrRobotData.hpp  cmrTransform.hpp
lib/cmrBase/: CMakeLists.txt
lib/cmrBase/Inc/: baseStdLibs.hpp  cmrDataBase.hpp  cmrException.hpp  cmrMath.hpp  cmrMathDef.hpp  cmrMatrix.hpp  cmrRobotCfgData.hpp  cmrRobotData.hpp  cmrTimer.hpp  cmrTransform.hpp
lib/cmrBase/Src/: cmrRobotCfgData.cpp  cmrRobotData.cpp  cmrTimer.cpp
lib/cmrDynamics/: CMakeLists.txt
lib/cmrDynamics/Inc/: cmrDynamics.hpp
lib/cmrDynamics/Src/: cmrDynamics.cpp
lib/cmrFileLoad/: CMakeLists.txt
lib/cmrFilter/: CMakeLists.txt
lib/cmrFilter/Inc/: ButterworthLPFilter.hpp  movingAverageFilter.hpp
lib/cmrFilter/Src/: ButterworthLPFilter.cpp  movingAverageFilter.cpp
lib/cmrParser/: CMakeLists.txt
lib/cmrParser/Inc/: cmrParser.hpp  cmrURDFParser.hpp
lib/cmrParser/Src/: cmrParser.cpp  cmrURDFParser.cpp
lib/cmrRobot/: CMakeLists.txt
lib/cmrRobot/Inc/: cmrRobotInterface.hpp  coppeliaSimRobot.hpp
lib/cmrRobot/Src/: cmrRobotInterface.cpp  coppeliaSimRobot.cpp
lib/cmrTrajectory/: CMakeLists.txt
lib/cmrTrajectory/Inc/: cmrDoubleSTraj.hpp  cmrTrajDataDef.hpp  cmrTrajDataDefine.hpp  cmrTrapzoidalTraj.hpp
lib/cmrTrajectory/Src/: cmrDoubleSTraj.cpp
lib/test/: CMakeLists.txt
lib/test/Inc/: multiThreadTest.hpp  myHello.h
lib/test/Src/: multiThreadTest.cpp  myHello.cpp
matlabCode/filterTest/: filteredData.txt  plotData.m  rawData.txt  rawDataGenerate.m
