#############################################################
# This is the CMakeLists file for all the final
# binary libraries
#############################################################

# add all the lib directories here to be compelled
add_subdirectory(test)
add_subdirectory(cmrBase)
add_subdirectory(cmrDynamics)
add_subdirectory(cmrParser)
add_subdirectory(cmrFilter)
add_subdirectory(cmrRobot)

